@@ -1,20 +1,8 @@
-<?xml version="1.0" encoding="utf-16"?>
 <configuration>
-	<configSections>
-		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-	</configSections>
 	<appSettings>
 		<add key="key" value="my freaking valuesn" />
 	</appSettings>
-	<log4net>
-		<appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
-			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
-			</layout>
-		</appender>
-		<root>
-			<level value="DEBUG" />
-			<appender-ref ref="ConsoleAppender" />
-		</root>
-	</log4net>
+	<connectionStrings>
+		<add name="SqliteConnectionString" connectionString="URI=file:SqliteTest.db"/>
+	</connectionStrings>
 </configuration>
